compiler/driver/tests/snapshots/fixtures__m5-arrays__errors__index-not-int.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m5-arrays/errors/index-not-int.scoop:3:15: error: array index must be Int, found String
