compiler/driver/tests/snapshots/fixtures__m5-arrays__errors__subscript-non-array.scoop.snap
---
source: compiler/driver/tests/fixtures.rs
expression: snapshot
---
== diagnostics ==
m5-arrays/errors/subscript-non-array.scoop:3:13: error: subscript is only supported on arrays, found Int
